--- a/benchmark/notebooks/benchmark_plot.ipynb
+++ b/benchmark/notebooks/benchmark_plot.ipynb
@@ -62,9 +62,9 @@
     "   * Set `CHUNK_TASKS` to `1`.\n",
     "   * Set `USE_OPENMP` to `0`.\n",
     "   \n",
-    "   **Compile the package twice** for each of (1) efficient Grammian matrix multiplication and (2) generic matrix multiplication:\n",
-    "   * To use symmetry in Grammian matrix multiplication, set `USE_SYMMETRY` to `1`\n",
-    "   * To not use symmetry in Grammian matrix multiplication, set `USE_SYMMETRY` to `0`.\n",
+    "   **Compile the package twice** for each of (1) efficient Gramian matrix multiplication and (2) generic matrix multiplication:\n",
+    "   * To use symmetry in Gramian matrix multiplication, set `USE_SYMMETRY` to `1`\n",
+    "   * To not use symmetry in Gramian matrix multiplication, set `USE_SYMMETRY` to `0`.\n",
     "   \n",
     "   Then, compile with\n",
     "\n",
@@ -85,7 +85,7 @@
     "   \n",
     "3. Results will stored as pickle files in [`/benchmark/pickle_results`](https://github.com/ameli/detkit/tree/main/benchmark/pickle_results). For the above four experiments, there should be four files with the names:\n",
     "   \n",
-    "   | Output filename | function | matrix size | Grammian Matrix Multiplication |\n",
+    "   | Output filename | function | matrix size | Gramian Matrix Multiplication  |\n",
     "   | :-------------- | :------- | ----------- | :----------------------------- |\n",
     "   | `benchmark_loggdet_9_gram.pickle` | $\\mathrm{loggdet}$ | $n=2^9$ | with symmetry |\n",
     "   | `benchmark_loggdet_9_no-gram.pickle` | $\\mathrm{loggdet}$ | $n=2^9$ | without symmetry |\n",
@@ -94,8 +94,8 @@
     "   \n",
     "4. Generate plots on this notebook by commenting out one of the following datasets:\n",
     "\n",
-    "   | syntax | Grammian Matrix | Function |\n",
-    "   | :----- | :-------------- | :------- |\n",
+    "   | syntax | Gramian Matrix | Function |\n",
+    "   | :----- | :------------- | :------- |\n",
     "   | `base_filename = 'benchmark-loggdet-9-gram`    | `USE_SYMMETRY=1` | `FUNC=loggdet` |\n",
     "   | `base_filename = 'benchmark-logpdet-9-gram`    | `USE_SYMMETRY=1` | `FUNC=logpdet` |\n",
     "   | `base_filename = 'benchmark-loggdet-9-no-gram` | `USE_SYMMETRY=0` | `FUNC=loggdet` |\n",
@@ -737,11 +737,11 @@
     "\n",
     "    # Filename\n",
     "    if detkit_config['use_symmetry']:\n",
-    "        grammian_status = 'gram'\n",
+    "        gramian_status = 'gram'\n",
     "    else:\n",
-    "        grammian_status = 'no-gram'\n",
+    "        gramian_status = 'no-gram'\n",
     "    str_n = str(int(numpy.log2(config['n'])))\n",
-    "    filename = config['func'] + '-' + str_n + '-' + grammian_status + '-time'\n",
+    "    filename = config['func'] + '-' + str_n + '-' + gramian_status + '-time'\n",
     "\n",
     "    # Save\n",
     "    save_plot(plt, filename, transparent_background=True)\n",
@@ -850,11 +850,11 @@
     "\n",
     "    # Filename\n",
     "    if detkit_config['use_symmetry']:\n",
-    "        grammian_status = 'gram'\n",
+    "        gramian_status = 'gram'\n",
     "    else:\n",
-    "        grammian_status = 'no-gram'\n",
+    "        gramian_status = 'no-gram'\n",
     "    str_n = str(int(numpy.log2(config['n'])))\n",
-    "    filename = config['func'] + '-' + str_n + '-' + grammian_status + '-exp-flops'\n",
+    "    filename = config['func'] + '-' + str_n + '-' + gramian_status + '-exp-flops'\n",
     "\n",
     "    # Save\n",
     "    save_plot(plt, filename, transparent_background=True)\n",
@@ -896,7 +896,7 @@
     "    # Flops for each operation per n**3\n",
     "    tr = 0.5        # solving triangular system (either of forward or backward substitution)\n",
     "    mm = 1.0        # full matrix-matrix multiplication\n",
-    "    gr = 0.5        # Computating Grammian matrix multiplication takes half of generic matrix multiplication\n",
+    "    gr = 0.5        # Computating Gramian matrix multiplication takes half of generic matrix multiplication\n",
     "    ch = 1.0/3.0    # cholesky decomposition\n",
     "    lu = 2.0/3.0    # lu (or lup) decomposition\n",
     "\n",
@@ -988,7 +988,7 @@
     "    are defined as one multiplication and one addition together. The experimental FLOPs (see the above \n",
     "    function) is expected to match the analytical FLOPs (this function). \n",
     "    \n",
-    "    This plot combines both cases where the Grammian matrix multiplication is performed using the symmetry\n",
+    "    This plot combines both cases where the Gramian matrix multiplication is performed using the symmetry\n",
     "    of the matrix (solid lines, gamma = 1/2) and without it (dashes lines, gamma=1).\n",
     "    \n",
     "    This function produces two different plots depending if the function is loggdet or logpdet.\n",
@@ -1052,11 +1052,11 @@
     "\n",
     "    # filename\n",
     "    if detkit_config['use_symmetry']:\n",
-    "        grammian_status = 'gram'\n",
+    "        gramian_status = 'gram'\n",
     "    else:\n",
-    "        grammian_status = 'no-gram'\n",
+    "        gramian_status = 'no-gram'\n",
     "    str_n = str(int(numpy.log2(config['n'])))\n",
-    "    filename = config['func'] + '-' + str_n + '-' + grammian_status + '-analytic-flops'\n",
+    "    filename = config['func'] + '-' + str_n + '-' + gramian_status + '-analytic-flops'\n",
     "\n",
     "    # Save\n",
     "    save_plot(plt, filename, transparent_background=True)\n",
@@ -1145,11 +1145,11 @@
     "\n",
     "    # Filename\n",
     "    if detkit_config['use_symmetry']:\n",
-    "        grammian_status = 'gram'\n",
+    "        gramian_status = 'gram'\n",
     "    else:\n",
-    "        grammian_status = 'no-gram'\n",
+    "        gramian_status = 'no-gram'\n",
     "    str_n = str(int(numpy.log2(config['n'])))\n",
-    "    filename = config['func'] + '-' + str_n + '-' + grammian_status + '-func-value'\n",
+    "    filename = config['func'] + '-' + str_n + '-' + gramian_status + '-func-value'\n",
     "    ax.grid(axis='y')\n",
     "\n",
     "    # Save\n",
