--- a/benchmark/notebooks/benchmark_plot_old.ipynb
+++ b/benchmark/notebooks/benchmark_plot_old.ipynb
@@ -41,7 +41,7 @@
     "    * $\\mathbf{A}$ is SPD.\n",
     "    * $\\mathbf{A}$ is not SPD.\n",
     "    \n",
-    "* Matrix $\\mathbf{X}$ is randomly generated with the size $n \\times p$. The ratio $p/n$ is varried from $0, \\cdots, 1$ at $t=50$ different ratios, while $n$ is fixed. The columns of this matrix are orthogonalized. We *assume* both cases:\n",
+    "* Matrix $\\mathbf{X}$ is randomly generated with the size $n \\times p$. The ratio $p/n$ is varried from $0, \\cdots, 1$ at $l=30$ different ratios, while $n$ is fixed. The columns of this matrix are orthogonalized. We *assume* both cases:\n",
     "    * $\\mathbf{X}$ is orthogonal.\n",
     "    * $\\mathbf{X}$ is not orthogonal.\n",
     " \n",
@@ -75,7 +75,7 @@
     "       cd benchmark/jobfiles\n",
     "       vim jobfile_benchmark.pbs\n",
     "       \n",
-    "   In [`/benchmark/jobfiles/jobfile_benchmark.pbs`](https://github.com/ameli/detkit/blob/main/benchmark/jobfiles/jobfile_benchmark.pbs), set `N=9` (corresponding to $n = 2^9$), `NUM_RATIOS=50` (corresponding to $t=50$), `REPEAT=10` (corresponding to $r=10$). Also, set `FUNC` to \n",
+    "   In [`/benchmark/jobfiles/jobfile_benchmark.pbs`](https://github.com/ameli/detkit/blob/main/benchmark/jobfiles/jobfile_benchmark.pbs), set `N=9` (corresponding to $n = 2^9$), `NUM_RATIOS=50` (corresponding to $l=30$), `REPEAT=10` (corresponding to $r=10$). Also, set `FUNC` to \n",
     "   * `FUNC=\"loggdet\"`, which computes $\\mathrm{loggdet}(\\mathbf{A}, \\mathbf{X})$\n",
     "   * `FUNC=\"logpdet\"`, which computes $\\mathrm{logpdet}(\\mathbf{A}, \\mathbf{X})$\n",
     "   \n",
@@ -1202,7 +1202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
