--- a/benchmark/notebooks/benchmark_plot_old.ipynb
+++ b/benchmark/notebooks/benchmark_plot_old.ipynb
@@ -59,7 +59,7 @@
     "   In [`/detkit/_definitions/definition.h`](https://github.com/ameli/detkit/blob/main/detkit/_definitions/definitions.h):\n",
     "   \n",
     "   * Set `PERF_COUNT` to `1` to enable counting FLOPs.\n",
-    "   * Set `CHUNK_TASKS` to `1`.\n",
+    "   * Set `USE_LOOP_UNROLLING` to `1`.\n",
     "   * Set `USE_OPENMP` to `0`.\n",
     "   \n",
     "   **Compile the package twice** for each of (1) efficient Gramian matrix multiplication and (2) generic matrix multiplication:\n",
@@ -115,7 +115,7 @@
     " \n",
     " \n",
     " 1. The FLOPs are computed using the count of _retired hardware instruction events_, using `perf` tool API in C++. This library can only use used on **Linux**, and only on **recent processors**.\n",
-    " 2. `CHUNK_TASKS` should be set to `1`. If it is set to `0`, first, the process times become very oscillatory, and second, the FLOPs per unit matrix-multiplicaiton task (`matmat` task) becomes a different number. For example, with chunk, the FLOP of `matmat` is near 5, and without it, it is 10.\n",
+    " 2. `USE_LOOP_UNROLLING` should be set to `1`. If it is set to `0`, first, the process times become very oscillatory, and second, the FLOPs per unit matrix-multiplicaiton task (`matmat` task) becomes a different number. For example, with chunk, the FLOP of `matmat` is near 5, and without it, it is 10.\n",
     " 3. `USE_OPENMP` should be set to `0` to properly compare both methods of LHS and RHS.\n",
     " 4. This code only uses one thread of a processor."
    ]
@@ -247,11 +247,11 @@
     "print('num CPUs: %s' %devices['num_all_cpu_threads'])\n",
     "\n",
     "print('')\n",
-    "print('use blas:     %s' % config['use_blas'])\n",
-    "print('use_symmetry: %s' % detkit_config['use_symmetry'])\n",
-    "print('use_openmp:   %s' % detkit_config['use_openmp'])\n",
-    "print('chunk_tasks:  %s' % detkit_config['chunk_tasks'])\n",
-    "print('count_perf:   %s' % detkit_config['count_perf'])\n",
+    "print('use blas:            %s' % config['use_blas'])\n",
+    "print('use_symmetry:        %s' % detkit_config['use_symmetry'])\n",
+    "print('use_openmp:          %s' % detkit_config['use_openmp'])\n",
+    "print('use_loop_unrolling:  %s' % detkit_config['use_loop_unrolling'])\n",
+    "print('count_perf:          %s' % detkit_config['count_perf'])\n",
     "\n",
     "print('')\n",
     "print('hw instructions per matmat:   %0.3f' % devices['instructions_per_matmat'])\n",
@@ -1202,7 +1202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
