--- a/benchmark/notebooks/benchmark_plot.ipynb
+++ b/benchmark/notebooks/benchmark_plot.ipynb
@@ -108,7 +108,7 @@
     " \n",
     " \n",
     " 1. The FLOPs are computed using the count of _retired hardware instruction events_, using `perf` tool API in C++. This library can only use used on **Linux**, and only on **recent processors**.\n",
-    " 2. `USE_LOOP_UNROLLING` should be set to `1`. If it is set to `0`, first, the process times become very oscillatory, and second, the FLOPs per unit matrix-multiplicaiton task (`matmat` task) becomes a different number. For example, with chunk, the FLOP of `matmat` is near 5, and without it, it is 10.\n",
+    " 2. `USE_LOOP_UNROLLING` should be set to `1`. If it is set to `0`, first, the process times become very oscillatory, and second, the FLOPs per unit matrix-multiplicaiton task (`matmul` task) becomes a different number. For example, with chunk, the FLOP of `matmul` is near 5, and without it, it is 10.\n",
     " 3. `USE_OPENMP` should be set to `0` to properly compare both methods of LHS and RHS.\n",
     " 4. This code only uses one thread of a processor."
    ]
@@ -315,11 +315,11 @@
     "    print('count_perf:          %s' % detkit_config['count_perf'])\n",
     "\n",
     "    print('')\n",
-    "    print('hw instructions per matmat:   %0.3f' % devices['instructions_per_matmat'])\n",
+    "    print('hw instructions per matmul:   %0.3f' % devices['instructions_per_matmul'])   # changed matmat to matmul (2/17/2025)\n",
     "    print('hw instructions per gramian:  %0.3f' % devices['instructions_per_gramian'])\n",
     "    print('hw instructions per cholesky: %0.3f' % devices['instructions_per_cholesky'])\n",
     "    print('hw instructions per lu:       %0.3f' % devices['instructions_per_lu'])\n",
-    "    print('hw instructions per lup:      %0.3f' % devices['instructions_per_lup'])\n",
+    "    print('hw instructions per plu:      %0.3f' % devices['instructions_per_plu'])  # changed lup to plu (2/17/2025)\n",
     "    print('-----------------------------------\\n')\n",
     "    \n",
     "    # ================\n",
@@ -1126,7 +1126,7 @@
     "    mm = 1.0        # full matrix-matrix multiplication\n",
     "    gr = 0.5        # Computating Gramian matrix multiplication takes half of generic matrix multiplication\n",
     "    ch = 1.0/3.0    # cholesky decomposition\n",
-    "    lu = 2.0/3.0    # lu (or lup) decomposition\n",
+    "    lu = 2.0/3.0    # lu (or plu) decomposition\n",
     "    gs = 2.0        # Gram-Schmidt\n",
     "    ux = 0.0        # If the matrix U_{x_{\\perp}} is precomputed, set this flag to zero, otherwise 1.\n",
     "\n",
@@ -1482,7 +1482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
